SUBDIRS = black/src \
	  test \
	  test2

include_HEADERS = \
	black/include/BlackEngine.h \
	black/include/Black.h \
	black/include/collide.h \
	black/include/FileImageTexture.h \
	black/include/font.h \
	black/include/FrameBuffer.h \
	black/include/GameObject.h \
	black/include/GraphicsContext.h \
	black/include/GrowableString.h \
	black/include/HashedString.h \
	black/include/HashedString.h.gch \
	black/include/IRenderable.h \
	black/include/Message.h \
	black/include/ObjectManager.h \
	black/include/Rect.h \
	black/include/sdl_font.h \
	black/include/sdl_graphics_context.h \
	black/include/sdl_sound.h \
	black/include/Shader.h \
	black/include/Texture.h \
	black/include/Utils.h \
	black/include/Vector.h