SUBDIRS = black/src \
	  test \
	  test2

include_HEADERS = \
	black/include/BlackEngine.h \
	black/include/Black.h \
	black/include/FileImageTexture.h \
	black/include/FrameBuffer.h \
	black/include/GameObject.h \
	black/include/GraphicsContext.h \
	black/include/GrowableString.h \
	black/include/HashedString.h \
	black/include/HashedString.h.gch \
	black/include/IRenderable.h \
	black/include/Message.h \
	black/include/ObjectManager.h \
	black/include/Rect.h \
	black/include/Shader.h \
	black/include/Texture.h \
	black/include/Utils.h \
	black/include/Vector.h